--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M26 | Cybersecurity</title>
+    <title>M26 | Network & System Programming</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
 </head>
@@ -30,24 +30,24 @@
             <h2 class="section-title">01. Projets</h2>
             <div class="grid">
                 <article class="card">
-                    <h3>Keylogger Detector</h3>
-                    <p>Développement d'un outil en Python pour détecter les signatures comportementales de keyloggers.</p>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                     <div class="tags"><span>Python</span><span>Forensics</span></div>
-                    <a href="#" class="link">Voir le repo ></a>
+                    <a href="#" class="link">View repo ></a>
                 </article>
 
                 <article class="card">
-                    <h3>Analyse Réseau M26</h3>
-                    <p>Script Bash pour l'automatisation de scan Nmap et génération de rapports de vulnérabilités.</p>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                     <div class="tags"><span>Bash</span><span>Network</span></div>
-                    <a href="#" class="link">Voir le repo ></a>
+                    <a href="#" class="link">View repo ></a>
                 </article>
 
                  <article class="card">
-                    <h3>CTF Write-ups</h3>
-                    <p>Collection de solutions et méthodologies pour les challenges Root-Me et HackTheBox.</p>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                     <div class="tags"><span>CTF</span><span>Web Sec</span></div>
-                    <a href="#" class="link">Lire ></a>
+                    <a href="#" class="link">View repo ></a>
                 </article>
             </div>
         </div>
@@ -74,7 +74,7 @@
     </section>
 
     <footer>
-        <p>M26 © 2024 | <a href="https://github.com/TON_USER_GITHUB">github.com/M26</a></p>
+        <p>M26 © 2024 | <a href="https://github.com/emvintsis">github.com/emvintsis</a></p>
     </footer>
 
     <script src="script.js"></script>
