Update header text and button label in index.html

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <header class="hero">
         <div class="container">
-            <h1 id="typing-text"></h1> <p class="subtitle">Analyse Malware | Pentesting | SecOps</p>
-            <a href="#projets" class="cta-btn">:: Explorer ::</a>
+            <h1 id="typing-text"></h1> <p class="subtitle">Maldev | System programming | Network</p>
+            <a href="#projets" class="cta-btn">:: Explore ::</a>
         </div>
     </header>
 
