Change language from French to English in index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="logo">M26_</div>
         <ul class="nav-links">
-            <li><a href="#projets">./Projets</a></li>
+            <li><a href="#projects">./projects</a></li>
             <li><a href="#articles">./Articles</a></li>
             <li><a href="https://github.com/TON_USER_GITHUB" target="_blank" class="github-btn">GitHub</a></li>
         </ul>
@@ -21,13 +21,13 @@
     <header class="hero">
         <div class="container">
             <h1 id="typing-text"></h1> <p class="subtitle">Maldev | System programming | Network</p>
-            <a href="#projets" class="cta-btn">:: Explore ::</a>
+            <a href="#projects" class="cta-btn">:: Explore ::</a>
         </div>
     </header>
 
-    <section id="projets" class="section">
+    <section id="projects" class="section">
         <div class="container">
-            <h2 class="section-title">01. Projets</h2>
+            <h2 class="section-title">01. projects</h2>
             <div class="grid">
                 <article class="card">
                     <h3>Lorem Ipsum</h3>
