Update articles section title
Removed 'Veille' from the section title in articles.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <section id="articles" class="section">
         <div class="container">
-            <h2 class="section-title">02. Articles & Veille</h2>
+            <h2 class="section-title">02. Articles</h2>
             <ul class="article-list">
                 <li class="article-item">
                     <span class="date">2023-11-28</span>
