--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul class="nav-links">
             <li><a href="#projects">./projects</a></li>
             <li><a href="#articles">./Articles</a></li>
-            <li><a href="https://github.com/TON_USER_GITHUB" target="_blank" class="github-btn">GitHub</a></li>
+            <li><a href="https://github.com/emvintsis" target="_blank" class="github-btn">GitHub</a></li>
         </ul>
     </nav>
 
