--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+    <canvas id="canvas"></canvas>
+
     <nav class="navbar">
         <div class="logo">M26_</div>
         <ul class="nav-links">
@@ -27,25 +29,25 @@
 
     <section id="projects" class="section">
         <div class="container">
-            <h2 class="section-title">01. projects</h2>
+            <h2 class="section-title">01. Projects</h2>
             <div class="grid">
                 <article class="card">
-                    <h3>Lorem Ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <h3>Keylogger Detector</h3>
+                    <p>Détection de signatures comportementales de keyloggers (Python).</p>
                     <div class="tags"><span>Python</span><span>Forensics</span></div>
                     <a href="#" class="link">View repo ></a>
                 </article>
 
                 <article class="card">
-                    <h3>Lorem Ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <h3>M26 Network Scanner</h3>
+                    <p>Automatisation de scan Nmap et rapports de vulnérabilités.</p>
                     <div class="tags"><span>Bash</span><span>Network</span></div>
                     <a href="#" class="link">View repo ></a>
                 </article>
 
                  <article class="card">
-                    <h3>Lorem Ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <h3>CTF Write-ups</h3>
+                    <p>Solutions et méthodologies pour Root-Me et HackTheBox.</p>
                     <div class="tags"><span>CTF</span><span>Web Sec</span></div>
                     <a href="#" class="link">View repo ></a>
                 </article>
