Update project titles and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
             <h2 class="section-title">01. Projects</h2>
             <div class="grid">
                 <article class="card">
-                    <h3>Keylogger Detector</h3>
-                    <p>Détection de signatures comportementales de keyloggers (Python).</p>
-                    <div class="tags"><span>Python</span><span>Forensics</span></div>
-                    <a href="#" class="link">View repo ></a>
+                    <h3>Autonomous Ransomware</h3>
+                    <p>Development of a full-fledged, standalone ransomware similar to Lockbit</p>
+                    <div class="tags"><span>C | Assembly</span><span>Maldev</span></div>
+                    <a href="#" class="link">Coming soon></a>
                 </article>
 
                 <article class="card">
-                    <h3>M26 Network Scanner</h3>
-                    <p>Automatisation de scan Nmap et rapports de vulnérabilités.</p>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="tags"><span>Bash</span><span>Network</span></div>
                     <a href="#" class="link">View repo ></a>
                 </article>
 
                  <article class="card">
-                    <h3>CTF Write-ups</h3>
-                    <p>Solutions et méthodologies pour Root-Me et HackTheBox.</p>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="tags"><span>CTF</span><span>Web Sec</span></div>
                     <a href="#" class="link">View repo ></a>
                 </article>
