--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <canvas id="canvas"></canvas>
@@ -38,7 +39,7 @@
                     <a href="#" class="link">Coming soon></a>
                 </article>
 
-                <article class="card">
+                <!-- <article class="card">
                     <h3>Lorem Ipsum</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="tags"><span>Bash</span><span>Network</span></div>
@@ -50,14 +51,14 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="tags"><span>CTF</span><span>Web Sec</span></div>
                     <a href="#" class="link">View repo ></a>
-                </article>
+                </article> -->
             </div>
         </div>
     </section>
 
     <section id="articles" class="section">
         <div class="container">
-            <h2 class="section-title">02. Articles</h2>
+         <!--  <h2 class="section-title">02. Articles</h2>
             <ul class="article-list">
                 <li class="article-item">
                     <span class="date">2023-11-28</span>
@@ -72,6 +73,7 @@
                     <a href="#">Configuration sécurisée d'un serveur Linux (Hardening)</a>
                 </li>
             </ul>
+            -->
         </div>
     </section>
 
