--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>M26 | Network & System Programming</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 
 <body>
