--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
     <section id="articles" class="section">
         <div class="container">
-         <!--  <h2 class="section-title">02. Articles</h2>
+          <h2 class="section-title">02. Articles</h2>
             <ul class="article-list">
-                <li class="article-item">
+                <!-- <li class="article-item">
                     <span class="date">2023-11-28</span>
                     <a href="#">Comprendre les attaques par Injection SQL en profondeur</a>
                 </li>
@@ -72,9 +72,9 @@
                 <li class="article-item">
                     <span class="date">2023-09-02</span>
                     <a href="#">Configuration sécurisée d'un serveur Linux (Hardening)</a>
-                </li>
+                </li> -->
             </ul>
-            -->
+           
         </div>
     </section>
 
